; ModuleID = '/home/carl/AnghaBench/linux/tools/perf/extr_builtin-timechart.c_process_exit_read.c'
source_filename = "/home/carl/AnghaBench/linux/tools/perf/extr_builtin-timechart.c_process_exit_read.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.timechart = type { i32 }
%struct.evsel = type { i32 }
%struct.perf_sample = type { i32, i32 }

@.str = private unnamed_addr constant [4 x i8] c"ret\00", align 1
@IOTYPE_READ = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.timechart*, %struct.evsel*, %struct.perf_sample*)* @process_exit_read to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @process_exit_read(%struct.timechart* %0, %struct.evsel* %1, %struct.perf_sample* %2) #0 {
  %4 = alloca %struct.timechart*, align 8
  %5 = alloca %struct.evsel*, align 8
  %6 = alloca %struct.perf_sample*, align 8
  %7 = alloca i64, align 8
  store %struct.timechart* %0, %struct.timechart** %4, align 8
  store %struct.evsel* %1, %struct.evsel** %5, align 8
  store %struct.perf_sample* %2, %struct.perf_sample** %6, align 8
  %8 = load %struct.evsel*, %struct.evsel** %5, align 8
  %9 = load %struct.perf_sample*, %struct.perf_sample** %6, align 8
  %10 = call i64 @perf_evsel__intval(%struct.evsel* %8, %struct.perf_sample* %9, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0))
  store i64 %10, i64* %7, align 8
  %11 = load %struct.timechart*, %struct.timechart** %4, align 8
  %12 = load %struct.perf_sample*, %struct.perf_sample** %6, align 8
  %13 = getelementptr inbounds %struct.perf_sample, %struct.perf_sample* %12, i32 0, i32 1
  %14 = load i32, i32* %13, align 4
  %15 = load i32, i32* @IOTYPE_READ, align 4
  %16 = load %struct.perf_sample*, %struct.perf_sample** %6, align 8
  %17 = getelementptr inbounds %struct.perf_sample, %struct.perf_sample* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = load i64, i64* %7, align 8
  %20 = call i32 @pid_end_io_sample(%struct.timechart* %11, i32 %14, i32 %15, i32 %18, i64 %19)
  ret i32 %20
}

declare dso_local i64 @perf_evsel__intval(%struct.evsel*, %struct.perf_sample*, i8*) #1

declare dso_local i32 @pid_end_io_sample(%struct.timechart*, i32, i32, i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
